<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">
    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="180sp"
        android:layout_height="180sp"
        android:src="@drawable/nft_icon"
        android:transitionName="@string/login_signup_logo_tran"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70sp"/>

    <ImageView
        android:id="@+id/wave11"
        android:layout_width="wrap_content"
        android:layout_height="120sp"
        android:layout_marginBottom="-5sp"
        android:scaleType="centerCrop"
        android:transitionName="@string/wave_tran"
        android:src="@drawable/ic_wave"
        app:layout_constraintBottom_toTopOf="@+id/loginComponentView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/wave12"
        android:layout_width="0dp"
        android:layout_height="100sp"
        android:layout_marginLeft="100sp"
        android:alpha="0.3"
        android:transitionName="@string/wave2_tran"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_wave"
        app:layout_constraintBottom_toBottomOf="@+id/wave11"
        app:layout_constraintStart_toStartOf="@+id/wave11"
        app:layout_constraintTop_toTopOf="@+id/wave11" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:elevation="20sp"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:transitionName="@string/login_signup_trans"
        app:layout_constraintBottom_toTopOf="@+id/editTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/wave11" />

    <View
        android:id="@+id/loginComponentView"
        android:layout_width="0dp"
        android:layout_height="0sp"
        android:layout_marginTop="160sp"
        android:transitionName="@string/login_signup_view_tran"
        android:background="@color/theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLogo"
        app:layout_constraintVertical_bias="1" />


    <LinearLayout
        android:id="@+id/editTextLayout"
        android:layout_width="0dp"
        android:layout_height="140sp"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="30sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/loginComponentView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/loginComponentView"
        app:layout_constraintTop_toTopOf="@+id/wave11">

        <EditText
            android:id="@+id/loginEmail"
            style="@style/EmailTextStyle"
            android:layout_width="match_parent"
            android:layout_height="55sp"
            android:transitionName="@string/email_editText_tran"
            android:layout_marginHorizontal="20sp"
            android:background="@drawable/edit_text_bg"
            android:elevation="10sp" />

        <EditText
            android:id="@+id/loginPassword"
            style="@style/PasswordTextStyle"
            android:layout_width="match_parent"
            android:layout_height="55sp"
            android:transitionName="@string/password_editText_tran"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/edit_text_bg"
            android:elevation="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:weightSum="2"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10sp"
        app:layout_constraintTop_toBottomOf="@+id/editTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="50sp"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginLoginBtn"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:layout_margin="5sp"
            android:text="Login"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:background="@drawable/login_signup_bg"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginSignupBtn"
            android:layout_width="0dp"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:text="Sign Up"
            android:transitionName="@string/signup_btn_tran"
            android:layout_margin="5sp"
            android:textColor="@color/white"
            android:background="@drawable/login_signup_bg"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>