<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:alpha="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/bg1"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:background="@drawable/back_btn_bg1" />
        <ImageView
            android:layout_width="50sp"
            android:layout_below="@+id/bg1"
            android:layout_height="50sp"
            android:background="@drawable/back_btn_bg2" />
        <ImageView
            android:layout_width="40sp"
            android:layout_below="@+id/bg1"
            android:layout_height="50sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/back_btn_bg2"/>
        <ImageView
            android:layout_width="30sp"
            android:layout_below="@+id/bg1"
            android:layout_height="50sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/back_btn_bg2"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/signupLogo"
        android:layout_width="180sp"
        android:layout_height="180sp"
        android:transitionName="@string/login_signup_logo_tran"
        android:src="@drawable/nft_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50sp"/>

    <ImageView
        android:id="@+id/wave21"
        android:layout_width="wrap_content"
        android:layout_height="120sp"
        android:layout_marginBottom="-5sp"
        android:scaleType="centerCrop"
        android:transitionName="@string/wave_tran"
        android:src="@drawable/ic_wave"
        app:layout_constraintBottom_toTopOf="@+id/loginComponentView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/wave22"
        android:layout_width="0dp"
        android:layout_height="100sp"
        android:layout_marginLeft="100sp"
        android:alpha="0.3"
        android:transitionName="@string/wave2_tran"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_wave"
        app:layout_constraintBottom_toBottomOf="@+id/wave21"
        app:layout_constraintStart_toStartOf="@+id/wave21"
        app:layout_constraintTop_toTopOf="@+id/wave21" />

    <TextView
        android:id="@+id/signupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55sp"
        android:elevation="50sp"
        android:text="Sign Up"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:transitionName="@string/login_signup_trans"
        app:layout_constraintBottom_toTopOf="@+id/editTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/wave21" />

    <View
        android:id="@+id/loginComponentView"
        android:layout_width="0dp"
        android:layout_height="0sp"
        android:layout_marginTop="160sp"
        android:transitionName="@string/login_signup_view_tran"
        android:background="@color/theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupLogo"
        app:layout_constraintVertical_bias="1" />


    <LinearLayout
        android:id="@+id/editTextLayout"
        android:layout_width="0dp"
        android:layout_height="210sp"
        android:layout_marginTop="50sp"
        android:layout_marginHorizontal="30sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/wave21">

        <EditText
            android:id="@+id/signupEmail"
            style="@style/EmailTextStyle"
            android:transitionName="@string/email_editText_tran"
            android:layout_width="match_parent"
            android:layout_height="55sp"
            android:layout_marginHorizontal="20sp"
            android:background="@drawable/edit_text_bg"
            android:elevation="10sp" />

        <EditText
            android:id="@+id/signupPassword"
            style="@style/PasswordTextStyle"
            android:layout_width="match_parent"
            android:layout_height="55sp"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="10sp"
            android:alpha="0"
            android:background="@drawable/edit_text_bg"
            android:elevation="10sp" />
        <EditText
            android:id="@+id/signupConfirmPassword"
            style="@style/PasswordTextStyle"
            android:hint="Confirm Password"
            android:layout_width="match_parent"
            android:layout_height="55sp"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="10sp"
            android:transitionName="@string/password_editText_tran"
            android:background="@drawable/edit_text_bg"
            android:elevation="10sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupSignupBtn"
        android:layout_width="0dp"
        android:layout_height="45sp"
        android:background="@drawable/login_signup_bg"
        android:text="Sign Up"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:transitionName="@string/signup_btn_tran"
        android:layout_marginHorizontal="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>