<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FAFAFA"
    android:layout_height="match_parent"
    tools:context=".ui.NFTActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginBottom="10sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/moreBtnCard"
                    android:layout_width="45sp"
                    android:layout_height="45sp"
                    android:layout_marginTop="40sp"
                    android:layout_marginEnd="25sp"
                    android:background="@drawable/btn_round_bg"
                    app:cardCornerRadius="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/moreBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="11sp"
                        app:srcCompat="@drawable/ic_more"
                        app:tint="#2E2E2E" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/backBtnCard"
                    android:layout_width="45sp"
                    android:layout_height="45sp"
                    android:layout_marginStart="25sp"
                    android:layout_marginTop="40sp"
                    android:background="@drawable/btn_round_bg"
                    app:cardCornerRadius="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/notifyBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="11sp"
                        app:srcCompat="@drawable/ic_back"
                        app:tint="#2E2E2E" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/nftNameText"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15sp"
                    android:layout_marginTop="35sp"
                    android:gravity="center"
                    android:paddingVertical="10sp"
                    android:text="Abstract Art"
                    android:textColor="@color/black"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/moreBtnCard"
                    app:layout_constraintStart_toEndOf="@+id/backBtnCard"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="500sp"
                android:layout_margin="10sp"
                android:transitionName="@string/nft_image_tran"
                app:cardCornerRadius="40sp"
                app:cardElevation="5sp">

                <ImageView
                    android:id="@+id/nftImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/monkey" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:id="@+id/relativeLayout"
                        android:layout_width="100sp"
                        android:layout_height="50sp"
                        android:background="@drawable/live_bg"
                        android:elevation="1sp"
                        android:transitionName="@string/nft_live_tran"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/liveTimeText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:text="06:07:44"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:targetApi="jelly_bean_mr1" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="50sp"
                        android:layout_height="50sp"
                        android:layout_margin="10sp"
                        android:background="@drawable/like_btn_bg"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:transitionName="@string/nft_detail_tran">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:padding="11sp"
                            android:src="@drawable/ic_unliked"
                            app:tint="@color/white" />
                    </RelativeLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="70sp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/circleImageView"
                        android:layout_width="50sp"
                        android:layout_height="50sp"
                        android:layout_marginStart="20sp"
                        android:src="@drawable/profile"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:layout_marginTop="5sp"
                        android:text="\@Umer-Mahar"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/circleImageView"
                        app:layout_constraintTop_toTopOf="@+id/circleImageView" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Umer-Mahar"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="80sp"
                        android:layout_height="40sp"
                        android:layout_marginEnd="20sp"
                        android:background="@drawable/edit_text_bg"
                        android:gravity="center"
                        android:paddingHorizontal="12sp"
                        android:paddingVertical="8sp"
                        android:text="Follow"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="40sp"
                        android:layout_height="35sp"
                        android:layout_marginEnd="10sp"
                        app:cardCornerRadius="10sp"
                        app:cardElevation="0sp"
                        app:layout_constraintBottom_toBottomOf="@+id/textView3"
                        app:layout_constraintEnd_toStartOf="@+id/textView3"
                        app:layout_constraintTop_toTopOf="@+id/textView3">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:padding="7sp"
                            android:src="@drawable/ic_msg"
                            app:tint="#575757" />
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.tabs.TabLayout
                    android:layout_width="300sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:background="#FAFAFA"
                    app:tabIndicator="@null">

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="About" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="History" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Owners" />
                </com.google.android.material.tabs.TabLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20sp"
                    android:text="@string/aboutText" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/button"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_margin="11sp"
        android:background="@drawable/bid_btn_bg"
        android:text="Place a bid"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="240.0"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <ImageView
        android:layout_width="23sp"
        android:layout_height="23sp"
        android:src="@drawable/ic_ethereum"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        android:layout_marginStart="5sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>